d3dvideosink: Release D3D surfaces when shutting down the sink

https://bugzilla.gnome.org/show_bug.cgi?id=726026